# typeaheadcli

./: Makefile  README.rst  pyproject.toml  setup.cfg
data/: random_words.txt
tests/: test_typeahead.py
typeahead/: cli.py  data_loader.py  trie.py
typeahead/scripts/: typeahead.py
